<resources>
    <string name="app_name">Song Snap</string>
    <string name="text_accounts">Songs Played</string>
    <string name="hint_name">Name</string>
    <string name="hint_title">Title</string>
    <string name="hint_album">Album</string>
    <string name="hint_artist">Main Artist</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account? Create one!</string>
    <string name="text_already_member">Already a member? Login.</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Passwords Do Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_user">User Details</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">YOUR HISTORY</string>
    <string name="text_title">Song Snap</string>
    <string name="title_activity_main">Song Snap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="main_song">Current Song</string>
    <string name="main_button1">Snap This</string>
    <string name="main_button2">Snap History</string>
</resources>
